--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "uuid": "^8.3.0",
+    "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.14",
+    "yc-fam-js": "^1.0.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
