--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
+    "resize-detector": "^0.2.2",
     "uuid": "^8.3.0",
     "vue": "^2.6.11",
     "vue-json-viewer": "^2.2.14",
